--- a/front-end/.eslintrc.json
+++ b/front-end/.eslintrc.json
@@ -32,6 +32,6 @@
     "react-hooks/exhaustive-deps": "warn",
     "react/prop-types": "off",
     "react/react-in-jsx-scope": "off",
-    "explicit-module-boundary-types": "off"
+    "@typescript-eslint/explicit-module-boundary-types": "off"
   }
 }
