--- a/package.json
+++ b/package.json
@@ -25,42 +25,38 @@
     ]
   },
   "dependencies": {
-    "next": "9.4.4",
+    "next": "9.5.2",
     "next-pwa": "^3.1.3",
-    "plop": "^2.7.4",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "styled-components": "^5.1.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.10.5",
+    "@babel/core": "^7.11.4",
     "@babel/preset-typescript": "^7.10.4",
-    "@storybook/addon-actions": "^5.3.19",
-    "@storybook/addon-knobs": "^5.3.19",
-    "@storybook/addon-links": "^5.3.19",
-    "@storybook/addons": "^5.3.19",
-    "@storybook/preset-typescript": "^3.0.0",
-    "@storybook/react": "^5.3.19",
+    "@storybook/addon-essentials": "6.0.16",
+    "@storybook/react": "6.0.16",
     "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.0.2",
-    "@types/jest": "^26.0.4",
-    "@types/node": "^14.6.4",
-    "@types/react": "^16.9.43",
-    "@types/styled-components": "^5.1.1",
-    "@typescript-eslint/eslint-plugin": "^3.6.1",
-    "@typescript-eslint/parser": "^3.6.1",
+    "@testing-library/react": "^10.4.9",
+    "@types/jest": "^26.0.10",
+    "@types/node": "^14.6.0",
+    "@types/react": "^16.9.46",
+    "@types/styled-components": "^5.1.2",
+    "@typescript-eslint/eslint-plugin": "^3.10.1",
+    "@typescript-eslint/parser": "^3.10.0",
     "babel-loader": "^8.1.0",
-    "babel-plugin-styled-components": "^1.10.7",
-    "eslint": "^7.4.0",
+    "babel-plugin-styled-components": "^1.11.1",
+    "eslint": "^7.7.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.4",
-    "eslint-plugin-react": "^7.20.3",
-    "eslint-plugin-react-hooks": "^4.0.8",
+    "eslint-plugin-react": "^7.20.6",
+    "eslint-plugin-react-hooks": "^4.1.0",
     "husky": "^4.2.5",
-    "jest": "^26.1.0",
-    "jest-styled-components": "^7.0.2",
+    "jest": "^26.4.2",
+    "jest-styled-components": "^7.0.3",
     "lint-staged": "^10.2.11",
-    "prettier": "^2.0.5",
+    "plop": "^2.7.4",
+    "prettier": "^2.1.1",
     "typescript": "^4.0.2"
   }
 }
